<resources>
    <string name="app_name">Health Record</string>

    <string name="title">Health Record</string>
    <string name="User">User :</string>
    <string name="Pass">Password :</string>
    <string name="Sign_up">Sign up</string>
    <string name="Sign_in">Sign in</string>

    <string name="title_signup">สมัครสมาชิค</string>
    <string name="name">ชื่อ นามสุกล</string>
    <string name="email">eMail</string>
    <string name="sex">เพศ</string>
    <string name="male">ชาย</string>
    <string name="female">หญิง</string>
    <string name="age">ช่วงอายุ</string>
    <string name="weight">น้ำหนัก (กิโลกรัม)</string>
    <string name="height">ส่วนสูง (เซ็นติเมตร)</string>
    <string name="save">บันทึกข้อมูล</string>

    <string name="title_record">พฤติกรรมประจำวัน</string>
    <string name="sleep">การนอน</string>
    <string name="food">อาหาร</string>
    <string name="exercise">ออกกำลังกาย</string>
    <string name="drink">การดื่มน้ำ</string>
    <string name="monitor">การอยู่หน้าจอ</string>

    <string name="my_service">บริการ ของฉัน</string>
    <string name="save1">บันทึกประจำวัน</string>
    <string name="history">ประวัติการบันทึก</string>

    <string name="morning">อาหารเช้า</string>
    <string name="lunch">อาหารกลางวัน</string>
    <string name="dinner">อาหารเย็น</string>
    <string name="time">เวลาในการออกกำลังกาย</string>
    <string name="alcoho">วันนี่คุณ ดื่ม แอลกอฮอล์ หรือยัง</string>
    <string name="chicklet">วันนี่คุณ สูบบุหรี หรือยัง</string>


</resources>
