<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="appewtc.masterung.healthrecord.RecordActivity"
    android:background="@drawable/wall">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="#82ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_record"
            android:id="@+id/textView5"
            android:textSize="@dimen/h1"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sleep"
                android:id="@+id/textView6"
                android:textSize="@dimen/h2"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:id="@+id/textView7"
                android:textSize="@dimen/h2"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner2"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/exercise"
                android:id="@+id/textView8"
                android:textSize="@dimen/h2"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner3"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/drink"
                android:id="@+id/textView9"
                android:textSize="@dimen/h2"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner4"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/monitor"
                android:id="@+id/textView10"
                android:textSize="@dimen/h2"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner5"
                android:layout_weight="2" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
